# sdxl-train

./: .gitignore  captioning.py  config.toml  prepare.py  pyproject.toml  remote.py  s3.py  ssh.py  train.py  transfer.py  vastai.py
config/: config.toml  prompt.txt
scripts/: prepare  s3  train
