[project]
name = "sd-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.30.0",
    "altair==4.2.2",
    "bitsandbytes>=0.47.0",
    "civitdl>=2.1.2",
    "diffusers[torch]==0.25.0",
    "easygui==0.98.3",
    "einops==0.7.0",
    "fairscale>=0.4.13",
    "ftfy==6.1.1",
    "gdown>=5.2.0",
    "huggingface-hub==0.24.5",
    "imagesize==1.4.1",
    "lion-pytorch==0.0.6",
    "lycoris-lora>=3.2.0.post2",
    "numpy<2",
    "onnx>=1.18.0",
    "onnxruntime-gpu>=1.22.0",
    "opencv-python==4.8.1.78",
    "prodigyopt==1.0",
    "pytorch-lightning==1.9.0",
    "rich==13.7.0",
    "safetensors==0.4.2",
    "timm>=1.0.19",
    "toml==0.10.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers==4.44.0",
    "triton>=3.4.0",
    "voluptuous==0.13.1",
    "xformers>=0.0.32.post2",
]
